[gd_scene load_steps=33 format=3 uid="uid://ci5xvel8cg6q6"]

[ext_resource type="Script" path="res://Main.gd" id="1_qnkro"]
[ext_resource type="Texture2D" uid="uid://bjcsqi3tsj86m" path="res://Assets/Levels/LP2.png" id="2_eyhjt"]
[ext_resource type="Texture2D" uid="uid://dolen2un8dtye" path="res://Assets/Levels/LP1.png" id="2_sfcul"]
[ext_resource type="Script" path="res://CustomCamera.gd" id="3_gonsn"]
[ext_resource type="FontFile" uid="uid://b1ewf85gd5sbd" path="res://Assets/Inter-VariableFont_slnt,wght.ttf" id="4_5cae2"]
[ext_resource type="PackedScene" uid="uid://dvi5rl7uwriv1" path="res://Player/SmallPlayer.tscn" id="6_iet4e"]
[ext_resource type="Texture2D" uid="uid://bbp0xga2g2vrl" path="res://Assets/Levels/F2.png" id="6_qvych"]
[ext_resource type="Texture2D" uid="uid://bd8sjlerbcjna" path="res://Assets/Levels/F3.png" id="7_k2gux"]
[ext_resource type="Texture2D" uid="uid://d37jpdb6uo84n" path="res://Assets/Levels/Intro/IntroDoorBack.png" id="7_x7n26"]
[ext_resource type="Texture2D" uid="uid://bprb0s46elpac" path="res://Assets/Levels/Intro/IntroDoorFront.png" id="8_fe433"]
[ext_resource type="Texture2D" uid="uid://duspxysjfj2ce" path="res://Assets/Levels/F4.png" id="8_p6hrt"]
[ext_resource type="Shader" path="res://Assets/WobbleImage.gdshader" id="8_ty1f1"]
[ext_resource type="Texture2D" uid="uid://copjvgf8wvsy6" path="res://Assets/Levels/F5.png" id="9_myuvu"]
[ext_resource type="Script" path="res://FallingPlatform.gd" id="10_eou8h"]
[ext_resource type="Texture2D" uid="uid://bidx0v55q46ek" path="res://Assets/Levels/F6.png" id="10_md1w6"]
[ext_resource type="Texture2D" uid="uid://dvq7exi4ytovg" path="res://Assets/Levels/F7.png" id="11_kk4qh"]
[ext_resource type="Texture2D" uid="uid://du404gvdx4jv1" path="res://Assets/Levels/F8.png" id="12_ofk0k"]
[ext_resource type="Texture2D" uid="uid://b2js47i4o3km3" path="res://Assets/Levels/F9.png" id="13_ytwcg"]
[ext_resource type="Texture2D" uid="uid://ne1skxohipet" path="res://Assets/Levels/F10.png" id="14_3ixbg"]
[ext_resource type="Texture2D" uid="uid://c4q0lj68lkk4w" path="res://Assets/Levels/F11.png" id="15_2xtn2"]
[ext_resource type="Texture2D" uid="uid://bm3f05gvfxsk4" path="res://Assets/Levels/F12.png" id="16_ygwrd"]
[ext_resource type="Texture2D" uid="uid://3pv2cggredgv" path="res://Assets/Levels/F13.png" id="17_s16jp"]
[ext_resource type="Texture2D" uid="uid://bk6nnfm5fso22" path="res://Assets/Levels/F14.png" id="18_k0pf5"]
[ext_resource type="Texture2D" uid="uid://sr3pp62344jq" path="res://Assets/Levels/F15.png" id="19_g3b1l"]
[ext_resource type="Texture2D" uid="uid://qf0pghoypwiu" path="res://Assets/Levels/F16.png" id="20_fq5l7"]
[ext_resource type="Texture2D" uid="uid://delyjq1rsd8ye" path="res://Assets/Levels/F17.png" id="21_6lrxh"]
[ext_resource type="Texture2D" uid="uid://bchd56nt48bug" path="res://Assets/Levels/F1.png" id="27_jqt16"]
[ext_resource type="PackedScene" uid="uid://6o6e7k1tf4nx" path="res://Dialog/ScrollNPC.tscn" id="28_w56en"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_1543q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0kqwu"]
size = Vector2(100, 15542.5)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_t08pd"]
shader = ExtResource("8_ty1f1")
shader_parameter/time_factor = 3.0
shader_parameter/amplitude = Vector2(2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e5b7g"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
corner_detail = 2
expand_margin_left = 25.0
expand_margin_top = 15.0
expand_margin_right = 25.0
expand_margin_bottom = 15.0
anti_aliasing = false

[node name="Main2" type="Node2D"]
script = ExtResource("1_qnkro")

[node name="Lp2" type="Sprite2D" parent="."]
z_index = -10
position = Vector2(0, -8101)
texture = ExtResource("2_eyhjt")

[node name="Level1" type="Sprite2D" parent="."]
z_index = -9
position = Vector2(0, -2724.5)
texture = ExtResource("2_sfcul")

[node name="CustomCamera" type="Camera2D" parent="."]
position = Vector2(0, -540)
script = ExtResource("3_gonsn")

[node name="FallingPlatforms" type="Node2D" parent="."]

[node name="FallingPlatform" type="StaticBody2D" parent="FallingPlatforms"]
script = ExtResource("10_eou8h")
sprite_path = NodePath("F1")

[node name="F1" type="Sprite2D" parent="FallingPlatforms/FallingPlatform"]
position = Vector2(191, -5732)
texture = ExtResource("27_jqt16")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="FallingPlatforms/FallingPlatform"]
polygon = PackedVector2Array(141, -5748, 141, -5716, 242, -5716, 242, -5748)

[node name="FallingPlatform2" type="StaticBody2D" parent="FallingPlatforms"]
script = ExtResource("10_eou8h")
sprite_path = NodePath("F2")

[node name="F2" type="Sprite2D" parent="FallingPlatforms/FallingPlatform2"]
position = Vector2(-219, -5732)
texture = ExtResource("6_qvych")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="FallingPlatforms/FallingPlatform2"]
polygon = PackedVector2Array(-269, -5748, -269, -5717, -169, -5717, -168, -5747)

[node name="FallingPlatform3" type="StaticBody2D" parent="FallingPlatforms"]
script = ExtResource("10_eou8h")
sprite_path = NodePath("F3")

[node name="F3" type="Sprite2D" parent="FallingPlatforms/FallingPlatform3"]
position = Vector2(-410, -5732)
texture = ExtResource("7_k2gux")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="FallingPlatforms/FallingPlatform3"]
polygon = PackedVector2Array(-520, -5748, -520, -5718, -301, -5717, -300, -5747)

[node name="FallingPlatform4" type="StaticBody2D" parent="FallingPlatforms"]
script = ExtResource("10_eou8h")
sprite_path = NodePath("F4")

[node name="F4" type="Sprite2D" parent="FallingPlatforms/FallingPlatform4"]
position = Vector2(312, -6662)
texture = ExtResource("8_p6hrt")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="FallingPlatforms/FallingPlatform4"]
polygon = PackedVector2Array(183, -6618, 191, -6600, 441, -6707, 433, -6726)

[node name="FallingPlatform5" type="StaticBody2D" parent="FallingPlatforms"]
script = ExtResource("10_eou8h")
sprite_path = NodePath("F5")

[node name="F5" type="Sprite2D" parent="FallingPlatforms/FallingPlatform5"]
position = Vector2(-455, -6236)
texture = ExtResource("9_myuvu")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="FallingPlatforms/FallingPlatform5"]
polygon = PackedVector2Array(-490, -6252, -490, -6221, -420, -6221, -420, -6251)

[node name="FallingPlatform6" type="StaticBody2D" parent="FallingPlatforms"]
script = ExtResource("10_eou8h")
sprite_path = NodePath("F6")

[node name="F6" type="Sprite2D" parent="FallingPlatforms/FallingPlatform6"]
position = Vector2(-658, -6171)
texture = ExtResource("10_md1w6")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="FallingPlatforms/FallingPlatform6"]
polygon = PackedVector2Array(-693, -6187, -693, -6155, -623, -6155, -623, -6187)

[node name="FallingPlatform7" type="StaticBody2D" parent="FallingPlatforms"]
script = ExtResource("10_eou8h")
sprite_path = NodePath("F7")

[node name="F7" type="Sprite2D" parent="FallingPlatforms/FallingPlatform7"]
position = Vector2(-485, -6018)
texture = ExtResource("11_kk4qh")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="FallingPlatforms/FallingPlatform7"]
polygon = PackedVector2Array(-520, -6033, -520, -6003, -450, -6003, -450, -6033)

[node name="FallingPlatform8" type="StaticBody2D" parent="FallingPlatforms"]
script = ExtResource("10_eou8h")
sprite_path = NodePath("F8")

[node name="F8" type="Sprite2D" parent="FallingPlatforms/FallingPlatform8"]
position = Vector2(-484, -7792)
texture = ExtResource("12_ofk0k")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="FallingPlatforms/FallingPlatform8"]
polygon = PackedVector2Array(-507, -7808, -507, -7776, -461, -7776, -460, -7808)

[node name="FallingPlatform9" type="StaticBody2D" parent="FallingPlatforms"]
script = ExtResource("10_eou8h")
sprite_path = NodePath("F9")

[node name="F9" type="Sprite2D" parent="FallingPlatforms/FallingPlatform9"]
position = Vector2(-317, -7958)
texture = ExtResource("13_ytwcg")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="FallingPlatforms/FallingPlatform9"]
polygon = PackedVector2Array(-339, -7974, -339, -7943, -294, -7943, -294, -7974)

[node name="FallingPlatform10" type="StaticBody2D" parent="FallingPlatforms"]
script = ExtResource("10_eou8h")
sprite_path = NodePath("F10")

[node name="F10" type="Sprite2D" parent="FallingPlatforms/FallingPlatform10"]
position = Vector2(-149, -8124)
texture = ExtResource("14_3ixbg")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="FallingPlatforms/FallingPlatform10"]
polygon = PackedVector2Array(-172, -8140, -172, -8109, -127, -8109, -127, -8140)

[node name="FallingPlatform11" type="StaticBody2D" parent="FallingPlatforms"]
script = ExtResource("10_eou8h")
sprite_path = NodePath("F11")

[node name="F11" type="Sprite2D" parent="FallingPlatforms/FallingPlatform11"]
position = Vector2(-256, -9054)
texture = ExtResource("15_2xtn2")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="FallingPlatforms/FallingPlatform11"]
polygon = PackedVector2Array(-329, -9028, -302, -9010, -182, -9071, -197, -9100)

[node name="FallingPlatform12" type="StaticBody2D" parent="FallingPlatforms"]
script = ExtResource("10_eou8h")
sprite_path = NodePath("F12")

[node name="F12" type="Sprite2D" parent="FallingPlatforms/FallingPlatform12"]
position = Vector2(191, -8293)
texture = ExtResource("16_ygwrd")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="FallingPlatforms/FallingPlatform12"]
polygon = PackedVector2Array(173, -8309, 173, -8277, 209, -8277, 209, -8308)

[node name="FallingPlatform13" type="StaticBody2D" parent="FallingPlatforms"]
script = ExtResource("10_eou8h")
sprite_path = NodePath("F13")

[node name="F13" type="Sprite2D" parent="FallingPlatforms/FallingPlatform13"]
position = Vector2(477, -9328)
texture = ExtResource("17_s16jp")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="FallingPlatforms/FallingPlatform13"]
polygon = PackedVector2Array(402, -9328, 408, -9298, 549, -9328, 544, -9358)

[node name="FallingPlatform14" type="StaticBody2D" parent="FallingPlatforms"]
script = ExtResource("10_eou8h")
sprite_path = NodePath("F14")

[node name="F14" type="Sprite2D" parent="FallingPlatforms/FallingPlatform14"]
position = Vector2(376, -7060)
texture = ExtResource("18_k0pf5")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="FallingPlatforms/FallingPlatform14"]
polygon = PackedVector2Array(336, -7089, 327, -7069, 414, -7031, 425, -7051)

[node name="FallingPlatform15" type="StaticBody2D" parent="FallingPlatforms"]
script = ExtResource("10_eou8h")
sprite_path = NodePath("F15")

[node name="F15" type="Sprite2D" parent="FallingPlatforms/FallingPlatform15"]
position = Vector2(159, -7200)
texture = ExtResource("19_g3b1l")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="FallingPlatforms/FallingPlatform15"]
polygon = PackedVector2Array(108, -7200, 114, -7179, 208, -7202, 203, -7224)

[node name="FallingPlatform16" type="StaticBody2D" parent="FallingPlatforms"]
position = Vector2(0, -21)
script = ExtResource("10_eou8h")
sprite_path = NodePath("F16")

[node name="F16" type="Sprite2D" parent="FallingPlatforms/FallingPlatform16"]
position = Vector2(-173, -7194)
texture = ExtResource("20_fq5l7")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="FallingPlatforms/FallingPlatform16"]
polygon = PackedVector2Array(-276, -7256, -285, -7235, -71, -7134, -62, -7154)

[node name="FallingPlatform17" type="StaticBody2D" parent="FallingPlatforms"]
script = ExtResource("10_eou8h")
sprite_path = NodePath("F17")

[node name="F17" type="Sprite2D" parent="FallingPlatforms/FallingPlatform17"]
position = Vector2(-626, -5825)
texture = ExtResource("21_6lrxh")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="FallingPlatforms/FallingPlatform17"]
polygon = PackedVector2Array(-674, -5840, -674, -5810, -577, -5810, -577, -5841)

[node name="Col" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Col"]
position = Vector2(0, -84)
shape = SubResource("WorldBoundaryShape2D_1543q")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Col"]
position = Vector2(769, -5924.75)
shape = SubResource("RectangleShape2D_0kqwu")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Col"]
position = Vector2(-769, -5905)
shape = SubResource("RectangleShape2D_0kqwu")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Col"]

[node name="CollisionPolygon2D50" type="CollisionPolygon2D" parent="Col"]
polygon = PackedVector2Array(449, -9593, 449, -9562, 503, -9562, 503, -9592)

[node name="CollisionPolygon2D49" type="CollisionPolygon2D" parent="Col"]
polygon = PackedVector2Array(647, -9400, 644, -9369, 722, -9358, 720, -9390)

[node name="CollisionPolygon2D48" type="CollisionPolygon2D" parent="Col"]
polygon = PackedVector2Array(-206, -9650, -206, -9630, -2, -9536, 207, -9631, 206, -9650, 93, -9650, 92, -9836, -94, -9836, -93, -9650)

[node name="CollisionPolygon2D47" type="CollisionPolygon2D" parent="Col"]
polygon = PackedVector2Array(-205, -9096, -205, -9064, 205, -9064, 205, -9095, -2, -9244)

[node name="CollisionPolygon2D46" type="CollisionPolygon2D" parent="Col"]
polygon = PackedVector2Array(-727, -8836, -610, -8792, -610, -8759, -723, -8801)

[node name="CollisionPolygon2D45" type="CollisionPolygon2D" parent="Col"]
polygon = PackedVector2Array(-203, -8751, 209, -8751, 210, -8725, 524, -8562, 511, -8533, 157, -8719, 180, -8383, 150, -8381, 126, -8719, -204, -8720)

[node name="CollisionPolygon2D43" type="CollisionPolygon2D" parent="Col"]
polygon = PackedVector2Array(440, -8332, 436, -8302, 734, -8264, 733, -8467, 651, -8428, 607, -8423, 591, -8313)

[node name="CollisionPolygon2D42" type="CollisionPolygon2D" parent="Col"]
polygon = PackedVector2Array(-723, -7582, -644, -7582, -644, -7424, -555, -7411, -560, -7382, -724, -7408)

[node name="CollisionPolygon2D41" type="CollisionPolygon2D" parent="Col"]
polygon = PackedVector2Array(-440, -7390, -429, -7361, -338, -7396, -350, -7425)

[node name="CollisionPolygon2D40" type="CollisionPolygon2D" parent="Col"]
polygon = PackedVector2Array(500, -6893, 494, -6863, 590, -6846, 596, -6876)

[node name="CollisionPolygon2D39" type="CollisionPolygon2D" parent="Col"]
polygon = PackedVector2Array(665, -6875, 674, -6849, 721, -6863, 722, -6894)

[node name="CollisionPolygon2D38" type="CollisionPolygon2D" parent="Col"]
polygon = PackedVector2Array(-246, -6312, -246, -6282, 0, -6282, 0, -6525, -145, -6525, -144, -6313)

[node name="CollisionPolygon2D37" type="CollisionPolygon2D" parent="Col"]
polygon = PackedVector2Array(-302, -5483, -302, -5446, -144, -5446, -144, -5483)

[node name="CollisionPolygon2D36" type="CollisionPolygon2D" parent="Col"]
polygon = PackedVector2Array(431, -5579, 429, -5548, 497, -5543, 499, -5574)

[node name="CollisionPolygon2D35" type="CollisionPolygon2D" parent="Col"]
polygon = PackedVector2Array(109, -5483, 108, -5446, 265, -5446, 266, -5483)

[node name="CollisionPolygon2D25" type="CollisionPolygon2D" parent="Col"]
polygon = PackedVector2Array(519, -5233, 645, -5280, 660, -5437, 728, -5451, 720, -5222, 528, -5205)

[node name="CollisionPolygon2D32" type="CollisionPolygon2D" parent="Col"]
polygon = PackedVector2Array(152, -5093, 149, -5062, 265, -5057, 266, -5088)

[node name="CollisionPolygon2D31" type="CollisionPolygon2D" parent="Col"]
polygon = PackedVector2Array(411, -4960, 404, -4930, 466, -4916, 472, -4946)

[node name="CollisionPolygon2D30" type="CollisionPolygon2D" parent="Col"]
polygon = PackedVector2Array(234, -4795, 235, -4763, 283, -4765, 282, -4797)

[node name="CollisionPolygon2D29" type="CollisionPolygon2D" parent="Col"]
polygon = PackedVector2Array(22, -4655, 29, -4625, 76, -4635, 70, -4665)

[node name="CollisionPolygon2D28" type="CollisionPolygon2D" parent="Col"]
polygon = PackedVector2Array(-361, -4531, -201, -4561, -195, -4531, -355, -4500)

[node name="CollisionPolygon2D23" type="CollisionPolygon2D" parent="Col"]
position = Vector2(-156, 55)
polygon = PackedVector2Array(-239, -3877, -239, -3846, -189, -3845, -189, -3877)

[node name="CollisionPolygon2D24" type="CollisionPolygon2D" parent="Col"]
position = Vector2(328, -105)
polygon = PackedVector2Array(-239, -3877, -239, -3846, -189, -3845, -189, -3877)

[node name="CollisionPolygon2D26" type="CollisionPolygon2D" parent="Col"]
position = Vector2(14, -298)
polygon = PackedVector2Array(-278, -3876, -277, -3846, -77, -3845, -77, -3876)

[node name="CollisionPolygon2D34" type="CollisionPolygon2D" parent="Col"]
position = Vector2(15, -36)
polygon = PackedVector2Array(-278, -3876, -277, -3846, -77, -3845, -77, -3876)

[node name="CollisionPolygon2D27" type="CollisionPolygon2D" parent="Col"]
position = Vector2(-507, -343)
polygon = PackedVector2Array(-214, -4046, -220, -3845, -78, -3845, -78, -3876, -130, -3876, -130, -4046)

[node name="CollisionPolygon2D19" type="CollisionPolygon2D" parent="Col"]
polygon = PackedVector2Array(-323, -3498, -323, -3467, -246, -3468, -247, -3498)

[node name="CollisionPolygon2D20" type="CollisionPolygon2D" parent="Col"]
position = Vector2(537, 1)
polygon = PackedVector2Array(-323, -3498, -323, -3467, -262, -3467, -262, -3498)

[node name="CollisionPolygon2D21" type="CollisionPolygon2D" parent="Col"]
position = Vector2(931, -185)
polygon = PackedVector2Array(-323, -3498, -323, -3467, -262, -3467, -262, -3498)

[node name="CollisionPolygon2D22" type="CollisionPolygon2D" parent="Col"]
position = Vector2(-238, -144)
polygon = PackedVector2Array(-323, -3498, -323, -3467, -262, -3467, -262, -3498)

[node name="CollisionPolygon2D18" type="CollisionPolygon2D" parent="Col"]
polygon = PackedVector2Array(-340, -3212, -330, -3183, 5, -3296, 330, -3182, 340, -3212, 5, -3330)

[node name="CollisionPolygon2D17" type="CollisionPolygon2D" parent="Col"]
polygon = PackedVector2Array(-722, -3057, -608, -3056, -608, -3010, -732, -3010)

[node name="CollisionPolygon2D16" type="CollisionPolygon2D" parent="Col"]
polygon = PackedVector2Array(607, -3057, 608, -3010, 728, -3011, 727, -3057)

[node name="CollisionPolygon2D15" type="CollisionPolygon2D" parent="Col"]
polygon = PackedVector2Array(138, -2979, 138, -2933, 292, -2932, 292, -2979)

[node name="CollisionPolygon2D14" type="CollisionPolygon2D" parent="Col"]
polygon = PackedVector2Array(-728, -2688, -515, -2639, -520, -2614, -727, -2662)

[node name="CollisionPolygon2D13" type="CollisionPolygon2D" parent="Col"]
polygon = PackedVector2Array(-199, -2785, -194, -2760, 11, -2800, 6, -2826)

[node name="CollisionPolygon2D12" type="CollisionPolygon2D" parent="Col"]
polygon = PackedVector2Array(5, -2634, 0, -2611, 204, -2565, 209, -2589)

[node name="CollisionPolygon2D11" type="CollisionPolygon2D" parent="Col"]
polygon = PackedVector2Array(-285, -2492, -291, -2466, -87, -2421, -81, -2446)

[node name="CollisionPolygon2D10" type="CollisionPolygon2D" parent="Col"]
polygon = PackedVector2Array(-291, -2256, -291, -2207, 300, -2208, 301, -2257)

[node name="CollisionPolygon2D9" type="CollisionPolygon2D" parent="Col"]
polygon = PackedVector2Array(577, -2063, 577, -1958, 588, -1894, 664, -1785, 696, -1607, 719, -1571, 720, -1958, 720, -2191, 655, -2190, 655, -2077)

[node name="CollisionPolygon2D8" type="CollisionPolygon2D" parent="Col"]
polygon = PackedVector2Array(-260, -1654, -255, -1634, -4, -1697, -4, -1807, 167, -1865, 326, -1949, 418, -1949, 419, -1971, 319, -1971, 157, -1884, -25, -1822, -25, -1714)

[node name="CollisionPolygon2D7" type="CollisionPolygon2D" parent="Col"]
polygon = PackedVector2Array(-722, -1516, -476, -1460, -481, -1436, -609, -1465, -688, -1447, -719, -1421)

[node name="CollisionPolygon2D6" type="CollisionPolygon2D" parent="Col"]
polygon = PackedVector2Array(-721, -1270, -721, -1227, -720, -1091, -683, -1139, -557, -1162, -455, -1205, -360, -1215, -347, -1226, -347, -1270)

[node name="CollisionPolygon2D5" type="CollisionPolygon2D" parent="Col"]
polygon = PackedVector2Array(-139, -932, -139, -868, 214, -870, 214, -933, 122, -933, 122, -976, 72, -976, 72, -1155, -51, -1155, -51, -934)

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="Col"]
polygon = PackedVector2Array(370, -629, 370, -577, 431, -577, 446, -425, 432, -259, 697, -259, 697, -84, 969, -68, 719, -842, 601, -842, 602, -629)

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="Col"]
polygon = PackedVector2Array(-49, -558, -44, -515, 37, -497, 110, -515, 192, -516, 194, -558)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Col"]
polygon = PackedVector2Array(-480, -228, -480, -113, -495, -86, 1, -84, -6, -110, -7, -229, -140, -229, -140, -390, -423, -390, -422, -230)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 45.0
offset_top = 33.0
offset_right = 90.0
offset_bottom = 70.0
theme_override_fonts/font = ExtResource("4_5cae2")
theme_override_font_sizes/font_size = 26
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="CanvasLayer/Label"]
z_index = -1
material = SubResource("ShaderMaterial_t08pd")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_e5b7g")

[node name="Player" parent="." instance=ExtResource("6_iet4e")]
position = Vector2(-232, -3906)

[node name="IntroDoorBack" type="Sprite2D" parent="."]
z_index = -3
position = Vector2(418, -174)
texture = ExtResource("7_x7n26")
flip_h = true

[node name="IntroDoorFront" type="Sprite2D" parent="."]
z_index = 3
position = Vector2(606.5, -175.5)
texture = ExtResource("8_fe433")
flip_h = true

[node name="ScrollNPC1" parent="." instance=ExtResource("28_w56en")]
position = Vector2(-141, -3932)
static_convo = true

[node name="ScrollNPC2" parent="." instance=ExtResource("28_w56en")]
position = Vector2(-104, -8776)
static_convo = true
